--- a/build.gradle
+++ b/build.gradle
@@ -14,7 +14,11 @@ repositories {
 
 dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-web'
+    implementation 'org.springframework.boot:spring-boot-starter-jdbc'
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
+    implementation group: 'org.postgresql', name: 'postgresql'
+    implementation group: 'com.zaxxer', name: 'HikariCP'
+    implementation group: 'org.flywaydb', name: 'flyway-core'
 }
 
 test {
