--- a/build.gradle
+++ b/build.gradle
@@ -2,6 +2,7 @@ plugins {
     id 'org.springframework.boot' version '2.4.3'
     id 'io.spring.dependency-management' version '1.0.11.RELEASE'
     id 'java'
+    id 'jacoco'
 }
 
 group = 'com.spd-university'
@@ -14,9 +15,25 @@ repositories {
 
 dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-web'
+    implementation 'org.springframework.boot:spring-boot-starter-jdbc'
+    implementation group: 'org.postgresql', name: 'postgresql'
+    implementation group: 'com.zaxxer', name: 'HikariCP'
+    implementation group: 'org.flywaydb', name: 'flyway-core'
+
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
+    testImplementation 'org.mockito:mockito-core'
+    testImplementation group: 'org.assertj', name: 'assertj-core'
 }
 
 test {
     useJUnitPlatform()
+    finalizedBy jacocoTestReport
+}
+
+jacocoTestReport {
+    dependsOn "test"
+    reports {
+        xml.enabled(true)
+        html.enabled(true)
+    }
 }
