--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -4,6 +4,7 @@ services:
   database:
     image: 'postgres:alpine'
     container_name: postgres
+    restart: on-failure
     ports:
       - "5432:5432"
     environment:
@@ -23,12 +24,26 @@ services:
     build:
       context: .
     container_name: backend-app
+    restart: on-failure
     ports:
       - "8080:8080"
     environment:
       - SPRING_DATASOURCE_URL=jdbc:postgresql://database:5432/${DB_NAME}
       - SPRING_DATASOURCE_USERNAME=${DB_USERNAME}
       - SPRING_DATASOURCE_PASSWORD=${DB_PASSWORD}
+    depends_on:
+      database:
+        condition: service_healthy
+
+  pgAdmin:
+    image: dpage/pgadmin4
+    restart: on-failure
+    ports:
+      - "5050:5050"
+    environment:
+      - PGADMIN_LISTEN_PORT=5050
+      - PGADMIN_DEFAULT_EMAIL=admin
+      - PGADMIN_DEFAULT_PASSWORD=12345
     depends_on:
       database:
         condition: service_healthy
