--- a/build.gradle
+++ b/build.gradle
@@ -16,9 +16,9 @@ repositories {
 dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-web'
     implementation 'org.springframework.boot:spring-boot-starter-jdbc'
-    implementation group: 'org.postgresql', name: 'postgresql'
-    implementation group: 'com.zaxxer', name: 'HikariCP'
-    implementation group: 'org.flywaydb', name: 'flyway-core'
+    implementation 'org.postgresql:postgresql'
+    implementation 'com.zaxxer:HikariCP'
+    implementation 'org.flywaydb:flyway-core'
 
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
     testImplementation 'org.mockito:mockito-core'
