--- a/build.gradle
+++ b/build.gradle
@@ -16,6 +16,8 @@ repositories {
 dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-web'
     implementation 'org.springframework.boot:spring-boot-starter-jdbc'
+    implementation 'org.springframework.boot:spring-boot-starter-validation'
+
     implementation 'org.postgresql:postgresql'
     implementation 'com.zaxxer:HikariCP'
     implementation 'org.flywaydb:flyway-core'
