--- a/build.gradle
+++ b/build.gradle
@@ -14,7 +14,10 @@ repositories {
 
 dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-web'
+    implementation 'org.springframework.boot:spring-boot-starter-data-jdbc'
+    implementation 'org.flywaydb:flyway-core'
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
+    implementation group: 'org.postgresql', name: 'postgresql', version: '42.2.18'
 }
 
 test {
