--- a/build.gradle
+++ b/build.gradle
@@ -17,6 +17,7 @@ dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-web'
     implementation 'org.springframework.boot:spring-boot-starter-jdbc'
     implementation 'org.springframework.boot:spring-boot-starter-validation'
+    implementation "io.springfox:springfox-boot-starter:3.0.0"
 
     implementation 'org.postgresql:postgresql'
     implementation 'com.zaxxer:HikariCP'
