--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,8 +2,8 @@ server.port=9000
 
 spring.mail.default-encoding=UTF-8
 spring.mail.host=smtp.gmail.com
-spring.mail.username=argosumy@gmail.com
-spring.mail.password=gt-i8160
+spring.mail.username=*****@gmail.com
+spring.mail.password=*****
 spring.mail.port=587
 spring.mail.protocol=smtp
 spring.mail.test-connection=false
