--- a/build.gradle
+++ b/build.gradle
@@ -22,6 +22,7 @@ dependencies {
     implementation 'org.postgresql:postgresql'
     implementation 'com.zaxxer:HikariCP'
     implementation 'org.flywaydb:flyway-core'
+    implementation 'com.googlecode.json-simple:json-simple:1.1.1'
 
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
     testImplementation 'org.mockito:mockito-core'
