--- a/build.gradle
+++ b/build.gradle
@@ -18,6 +18,7 @@ dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-jdbc'
     implementation 'org.springframework.boot:spring-boot-starter-validation'
     implementation "io.springfox:springfox-boot-starter:3.0.0"
+    implementation 'com.googlecode.json-simple:json-simple:1.1.1'
 
     implementation 'org.postgresql:postgresql'
     implementation 'com.zaxxer:HikariCP'
