[BE-P-005] added tests for new user creation on the first successful login

--- a/build.gradle
+++ b/build.gradle
@@ -21,6 +21,12 @@ dependencies {
     implementation 'org.flywaydb:flyway-core'
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
     testImplementation 'org.springframework.security:spring-security-test'
+    testImplementation 'org.dbunit:dbunit:2.7.0'
+    testImplementation 'com.github.database-rider:rider-core:1.23.0'
+    testImplementation 'com.github.database-rider:rider-junit5:1.23.0'
+    testImplementation 'com.github.database-rider:rider-spring:1.23.0'
+    testImplementation 'com.h2database:h2:1.4.200'
+
 }
 
 test {
