SAVE notification BLOCK,BAN,NEW ADVERTISEMENT, COMMENT AD,CHANGE AD UPDATE

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,10 +2,15 @@ server.port=9000
 
 spring.mail.default-encoding=UTF-8
 spring.mail.host=smtp.gmail.com
-spring.mail.username=*****@gmail.com
-spring.mail.password=*****
+spring.mail.username=argosumy@gmail.com
+spring.mail.password=gt-i8160
 spring.mail.port=587
 spring.mail.protocol=smtp
 spring.mail.test-connection=false
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
+
+
+datasource.url=jdbc:postgresql://localhost:5432/MarcetPlace
+datasource.name=postgres
+datasource.password=gt-i8160
