--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,5 +3,9 @@ spring.datasource.username=${DB_USERNAME:baraholka}
 spring.datasource.password=${DB_PASSWORD:baraholka}
 spring.security.oauth2.client.registration.google.client-id=${GOOGLE_CLIENT_ID}
 spring.security.oauth2.client.registration.google.client-secret=${GOOGLE_CLIENT_SECRET}
+
+spring.flyway.ignore-missing-migrations=true
+spring.flyway.out-of-order=true
+
 server.servlet.context-path=/api
 commentService.topCommentsCount=3
