--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,3 +5,6 @@ spring.security.oauth2.client.registration.google.client-id=${GOOGLE_CLIENT_ID}
 spring.security.oauth2.client.registration.google.client-secret=${GOOGLE_CLIENT_SECRET}
 server.servlet.context-path=/api
 commentService.topCommentsCount=3
+
+spring.flyway.ignore-missing-migrations=true
+spring.flyway.out-of-order=true
