[BE-P-005] added check for allowed domains during login

--- a/src/main/resources/application-test.properties
+++ b/src/main/resources/application-test.properties
@@ -5,3 +5,6 @@ spring.datasource.password=${TEST_DB_PASSWORD:baraholka_test}
 spring.flyway.url=${TEST_DB_URL:jdbc:postgresql://localhost:5432/baraholka_test}
 spring.flyway.user=${TEST_DB_USERNAME:baraholka_test}
 spring.flyway.password=${TEST_DB_PASSWORD:baraholka_test}
+
+login.allowed-domains=spd-ukraine.com,gmail.com
+#login.allowed-domains=spd-ukraine.com
