--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,20 +1,23 @@
-version: '2.3'
+version: '3'
 
 services:
   database:
     image: 'postgres:alpine'
+    build:
+      context: .
+      dockerfile: Dockerfile.postgres
     container_name: postgres
     restart: on-failure
     ports:
       - "5432:5432"
     environment:
-      - POSTGRES_DB=${DB_NAME}
-      - POSTGRES_USER=${DB_USERNAME}
-      - POSTGRES_PASSWORD=${DB_PASSWORD}
-    volumes:
-      - ./db-data:/var/lib/postgresql/data
+      - POSTGRES_DB=baraholka
+      - POSTGRES_USER=baraholka
+      - POSTGRES_PASSWORD=baraholka
+#    volumes:
+#      - ./db-data:/var/lib/postgresql/data
     healthcheck:
-      test: [ "CMD", "pg_isready", "-q", "-d", "${DB_NAME}", "-U", "${DB_USERNAME}" ]
+      test: [ "CMD", "pg_isready", "-q", "-d", "baraholka", "-U", "baraholka" ]
       interval: 10s
       timeout: 1s
       retries: 20
@@ -28,12 +31,11 @@ services:
     ports:
       - "8080:8080"
     environment:
-      - SPRING_DATASOURCE_URL=jdbc:postgresql://database:5432/${DB_NAME}
-      - SPRING_DATASOURCE_USERNAME=${DB_USERNAME}
-      - SPRING_DATASOURCE_PASSWORD=${DB_PASSWORD}
+      - SPRING_DATASOURCE_URL=jdbc:postgresql://database:5432/baraholka
+      - SPRING_DATASOURCE_USERNAME=baraholka
+      - SPRING_DATASOURCE_PASSWORD=baraholka
     depends_on:
-      database:
-        condition: service_healthy
+      - database
 
   pgAdmin:
     image: dpage/pgadmin4
@@ -45,8 +47,7 @@ services:
       - PGADMIN_DEFAULT_EMAIL=admin
       - PGADMIN_DEFAULT_PASSWORD=12345
     depends_on:
-      database:
-        condition: service_healthy
+      - database
 
-volumes:
-  db-data:
+#volumes:
+#  db-data:
