--- a/build.gradle
+++ b/build.gradle
@@ -16,10 +16,11 @@ dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-web'
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
     implementation 'org.springframework.boot:spring-boot-starter-data-jdbc'
-    implementation 'org.flywaydb:flyway-core'
+    implementation 'org.flywaydb:flyway-core:7.7.0'
     implementation 'org.junit.jupiter:junit-jupiter:5.4.2'
-    implementation "io.springfox:springfox-boot-starter:3.0.0"
-    implementation group: 'org.postgresql', name: 'postgresql', version: '42.2.18'
+    implementation 'io.springfox:springfox-boot-starter:3.0.0'
+    implementation 'org.postgresql:postgresql:42.2.19'
+
 }
 
 test {
