--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,12 @@
-spring.datasource.url=${DB_URL:jdbc:postgresql://localhost:5432/baraholka}
-spring.datasource.username=${DB_USERNAME:baraholka}
-spring.datasource.password=${DB_PASSWORD:baraholka}
+#spring.datasource.url=${DB_URL:jdbc:postgresql://localhost:5432/baraholka}
+#spring.datasource.username=${DB_USERNAME:baraholka}
+#spring.datasource.password=${DB_PASSWORD:baraholka}
 spring.flyway.ignore-missing-migrations=true
 spring.flyway.out-of-order=true
 spring.security.oauth2.client.registration.google.client-id=${GOOGLE_CLIENT_ID}
 spring.security.oauth2.client.registration.google.client-secret=${GOOGLE_CLIENT_SECRET}
+baraholka.scheduled.delete-old-archive-task=5000L
+#  86400000L
+spring.datasource.url=${DB_URL:jdbc:postgresql://localhost:5432/baraholka_test}
+spring.datasource.username=${DB_USERNAME:postgres}
+spring.datasource.password=${DB_PASSWORD:526526526}
