--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,11 +1,6 @@
-#spring.datasource.url=${DB_URL:jdbc:postgresql://localhost:5432/baraholka}
-#spring.datasource.username=${DB_USERNAME:baraholka}
-#spring.datasource.password=${DB_PASSWORD:baraholka}
-
-spring.datasource.url=jdbc:postgresql://localhost:5432/MarcetPlace
-spring.datasource.name=postgres
-spring.datasource.password=gt-i8160
-
+spring.datasource.url=${DB_URL:jdbc:postgresql://localhost:5432/baraholka}
+spring.datasource.username=${DB_USERNAME:baraholka}
+spring.datasource.password=${DB_PASSWORD:baraholka}
 spring.flyway.ignore-missing-migrations=true
 spring.flyway.out-of-order=true
 spring.security.oauth2.client.registration.google.client-id=${GOOGLE_CLIENT_ID:1013283074407-58tss8gf3kj0dfu7v3n4f9bt20q5r03d.apps.googleusercontent.com}
