[BE-005] deleted an active test profile and added artifact for test report in CI/CD

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -12,11 +12,21 @@ check:
   stage: test
   tags:
     - docker
+  services:
+    - postgres
+  variables:
+    DB_HOST: postgres
+    POSTGRES_DB: baraholka_test
+    POSTGRES_USER: baraholka_test
+    POSTGRES_PASSWORD: baraholka_test
   except:
     - prod
   script:
     - export GRADLE_USER_HOME=/cache/gradle
     - ./gradlew clean check --stacktrace
+  artifacts:
+    reports:
+      junit: builds/spd-marketplace/back-end/build/reports/tests/test/index.html
 
 .build:
   stage: build
