--- a/src/main/resources/application-test.properties
+++ b/src/main/resources/application-test.properties
@@ -1,8 +1,7 @@
 spring.datasource.url=${DB_URL:jdbc:postgresql://localhost:5432/baraholka_test}
 spring.datasource.username=${DB_USERNAME:baraholka_test}
 spring.datasource.password=${DB_PASSWORD:baraholka_test}
-spring.flyway.ignore-missing-migrations=true
-spring.flyway.out-of-order=true
+spring.flyway.enabled=false
 spring.security.oauth2.client.registration.google.client-id=${GOOGLE_CLIENT_ID:1013283074407-58tss8gf3kj0dfu7v3n4f9bt20q5r03d.apps.googleusercontent.com}
 spring.security.oauth2.client.registration.google.client-secret=${GOOGLE_CLIENT_SECRET:DxZSAV3vcyaZthia7ma6cMDI}
 login.allowed-domains=spd-ukraine.com,gmail.com
