--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -14,12 +14,12 @@ check:
     - docker
   services:
     - postgres
-    variables:
-      DB_HOST: postgres
-      DB_URL: jdbc:postgresql://${DB_HOST}:5432/baraholka_test
-      POSTGRES_DB: baraholka_test
-      POSTGRES_USER: baraholka_test
-      POSTGRES_PASSWORD: baraholka_test
+  variables:
+    DB_HOST: postgres
+    DB_URL: "jdbc:postgresql://${DB_HOST}:5432/baraholka_test"
+    POSTGRES_DB: baraholka_test
+    POSTGRES_USER: baraholka_test
+    POSTGRES_PASSWORD: baraholka_test
   except:
     - prod
   script:
