[BE-013] Added test profile for all tests and fixed flyway config in application-test.properties

--- a/src/main/resources/application-test.properties
+++ b/src/main/resources/application-test.properties
@@ -2,9 +2,9 @@ spring.datasource.url=jdbc:postgresql://${DB_HOST}:5432/baraholka_test
 spring.datasource.username=${DB_USERNAME:baraholka_test}
 spring.datasource.password=${DB_PASSWORD:baraholka_test}
 
-spring.flyway.url=${spring.datasource.url}
-spring.flyway.user=${spring.datasource.username}
-spring.flyway.password=${spring.datasource.password}
+spring.flyway.url=jdbc:postgresql://${DB_HOST}:5432/baraholka_test
+spring.flyway.user=${DB_USERNAME:baraholka_test}
+spring.flyway.password=${DB_PASSWORD:baraholka_test}
 
 login.allowed-domains=spd-ukraine.com,gmail.com
 
