--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -25,7 +25,7 @@ check:
   tags:
     - docker
   script:
-    - winpty docker login registry.gitlab.com -u $docker_registry_user -p $docker_registry_password
+    - docker login registry.gitlab.com -u $docker_registry_user -p $docker_registry_password
     - docker build -t registry.gitlab.com/spd-marketplace/back-end:$IMAGE_TAG -f Dockerfile.stage .
     - docker push registry.gitlab.com/spd-marketplace/back-end:$IMAGE_TAG
 
@@ -49,7 +49,7 @@ build master:
     - shell
   script:
     - cd $APP_PATH
-    - winpty docker login registry.gitlab.com -u $docker_registry_user -p $docker_registry_password
+    - docker login registry.gitlab.com -u $docker_registry_user -p $docker_registry_password
     - docker-compose down
     - docker-compose pull
     - docker-compose up -d
