--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -24,4 +24,4 @@ spring.mail.properties.mail.smtp.starttls.enable=true
 spring.mail.smtp.ssl.trust=smtp.gmail.com
 spring.mail.protocol=smtp
 spring.mail.test-connection=false
-baraholka.scheduled.delete-old-archive-task=
+baraholka.scheduled.delete-old-archive-task=0 20 * * * *
