--- a/src/main/resources/application-test.properties
+++ b/src/main/resources/application-test.properties
@@ -2,7 +2,7 @@ spring.datasource.url=jdbc:postgresql://${DB_HOST}:5432/baraholka_test
 spring.datasource.username=${DB_USERNAME:baraholka_test}
 spring.datasource.password=${DB_PASSWORD:baraholka_test}
 
-spring.flyway.url=jdbc:postgresql://${DB_HOST}:5432/baraholka_test
+spring.flyway.url=jdbc:postgresql://localhost:5432/baraholka_test
 spring.flyway.user=${DB_USERNAME:baraholka_test}
 spring.flyway.password=${DB_PASSWORD:baraholka_test}
 
