fixed test-data import in docker

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,6 +3,7 @@ spring.datasource.username=${DB_USERNAME:baraholka}
 spring.datasource.password=${DB_PASSWORD:baraholka}
 spring.flyway.ignore-missing-migrations=true
 spring.flyway.out-of-order=true
+spring.flyway.baselineOnMigrate = true
 spring.security.oauth2.client.registration.google.client-id=${GOOGLE_CLIENT_ID:1013283074407-58tss8gf3kj0dfu7v3n4f9bt20q5r03d.apps.googleusercontent.com}
 spring.security.oauth2.client.registration.google.client-secret=${GOOGLE_CLIENT_SECRET:DxZSAV3vcyaZthia7ma6cMDI}
 login.allowed-domains=spd-ukraine.com
