--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -12,11 +12,22 @@ check:
   stage: test
   tags:
     - docker
+  services:
+    - postgres
+  variables:
+    DB_HOST: postgres
+    DB_URL: "jdbc:postgresql://${DB_HOST}:5432/baraholka_test"
+    POSTGRES_DB: baraholka_test
+    POSTGRES_USER: baraholka_test
+    POSTGRES_PASSWORD: baraholka_test
   except:
     - prod
   script:
     - export GRADLE_USER_HOME=/cache/gradle
     - ./gradlew clean check --stacktrace
+  artifacts:
+    reports:
+      junit: build/test-results/test/TEST-*.xml
 
 .build:
   stage: build
