--- a/src/main/resources/application-test.properties
+++ b/src/main/resources/application-test.properties
@@ -10,5 +10,6 @@ login.allowed-domains=spd-ukraine.com,gmail.com
 
 spring.security.oauth2.client.registration.google.client-id=${GOOGLE_CLIENT_ID:1013283074407-58tss8gf3kj0dfu7v3n4f9bt20q5r03d.apps.googleusercontent.com}
 spring.security.oauth2.client.registration.google.client-secret=${GOOGLE_CLIENT_SECRET:DxZSAV3vcyaZthia7ma6cMDI}
+spring.security.oauth2.client.registration.google.scope=profile,email
 
 server.servlet.context-path=/api
