[BE-P-015] fixed flyway url in application-test.properties file

--- a/src/test/resources/application-test.properties
+++ b/src/test/resources/application-test.properties
@@ -1,10 +1,13 @@
-spring.datasource.url=jdbc:postgresql://${DB_HOST}:5432/baraholka_test
+spring.datasource.url=jdbc:postgresql://${DB_HOST:postgres}:5432/baraholka_test
 spring.datasource.username=${DB_USERNAME:baraholka_test}
 spring.datasource.password=${DB_PASSWORD:baraholka_test}
 
-spring.flyway.url=jdbc:postgresql://localhost:5432/baraholka_test
+spring.flyway.url=jdbc:postgresql://${DB_HOST:postgres}:5432/baraholka_test
 spring.flyway.user=${DB_USERNAME:baraholka_test}
 spring.flyway.password=${DB_PASSWORD:baraholka_test}
+spring.flyway.ignore-missing-migrations=true
+spring.flyway.out-of-order=true
+spring.flyway.baselineOnMigrate = true
 
 login.allowed-domains=spd-ukraine.com,gmail.com
 
