--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -11,6 +11,7 @@ amazonProperties.bucketName=baraholka-images-store
 amazonProperties.accessKey=AKIA2UJTDAQ3QGZQN3HE
 amazonProperties.secretKey=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
 amazonProperties.region=eu-west-1
+amazon.domain=https://s3-eu-west-1.amazonaws.com/
 spring.servlet.multipart.max-file-size=5MB
 spring.servlet.multipart.max-request-size=50MB
 spring.mail.default-encoding=UTF-8
