--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -17,8 +17,8 @@ spring.servlet.multipart.max-file-size=5MB
 spring.servlet.multipart.max-request-size=50MB
 spring.mail.default-encoding=UTF-8
 spring.mail.host=smtp.gmail.com
-spring.mail.username=email
-spring.mail.password=password
+spring.mail.username=spilnich@gmail.com
+spring.mail.password=441817340
 spring.mail.port=587
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
