--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,7 @@
 spring.datasource.url=${DB_URL:jdbc:postgresql://localhost:5432/baraholka}
 spring.datasource.username=${DB_USERNAME:baraholka}
 spring.datasource.password=${DB_PASSWORD:baraholka}
+spring.flyway.locations=classpath:db/migration,filesystem:test-data
 spring.flyway.ignore-missing-migrations=true
 spring.flyway.out-of-order=true
 spring.flyway.baselineOnMigrate = true
@@ -14,6 +15,7 @@ amazonProperties.bucketName=baraholka-images-store
 amazonProperties.accessKey=AKIA2UJTDAQ3QGZQN3HE
 amazonProperties.secretKey=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
 amazonProperties.region=eu-west-1
+amazonProperties.imagesUrl=https://baraholka-images-store.s3-eu-west-1.amazonaws.com/
 amazon.domain=https://s3-eu-west-1.amazonaws.com/
 spring.servlet.multipart.max-file-size=5MB
 spring.servlet.multipart.max-request-size=50MB
