added CharacteristicController. delete #spring.flyway.locations filesystem:test-data

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 spring.datasource.url=${DB_URL:jdbc:postgresql://localhost:5432/baraholka}
 spring.datasource.username=${DB_USERNAME:baraholka}
 spring.datasource.password=${DB_PASSWORD:baraholka}
-spring.flyway.locations=classpath:db/migration,filesystem:test-data
+spring.flyway.locations=classpath:db/migration
 spring.flyway.ignore-missing-migrations=true
 spring.flyway.out-of-order=true
 spring.flyway.baselineOnMigrate = true
