--- a/Dockerfile.stage
+++ b/Dockerfile.stage
@@ -3,7 +3,7 @@ COPY . /build
 WORKDIR /build
 RUN ./gradlew assemble
 WORKDIR /build/build/libs
-RUN java -Djarmode=layertools -jar build-0.0.1-SNAPSHOT.jar extract
+RUN java -Dspring.profiles.active=stage -Djarmode=layertools -jar build-0.0.1-SNAPSHOT.jar extract
 
 FROM openjdk:11-jre-slim
 WORKDIR /application
