--- a/Dockerfile.stage
+++ b/Dockerfile.stage
@@ -12,4 +12,4 @@ COPY --from=builder /build/build/libs/spring-boot-loader/ ./
 COPY --from=builder /build/build/libs/snapshot-dependencies/ ./
 COPY --from=builder /build/build/libs/application/ ./
 EXPOSE 8080
-ENTRYPOINT ["java", "org.springframework.boot.loader.JarLauncher"]
+ENTRYPOINT ["java", "-Dspring.profiles.active=stage", "org.springframework.boot.loader.JarLauncher"]
