--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -29,3 +29,4 @@ spring.mail.smtp.ssl.trust=smtp.gmail.com
 spring.mail.protocol=smtp
 spring.mail.test-connection=false
 logging.level.org.springframework.web=debug
+user.avatar.maxsize.mb=2
