--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 spring.datasource.url=jdbc:postgresql://localhost:5432/baraholka
-spring.datasource.username=postgres
-spring.datasource.password=201289
+spring.datasource.username=baraholka
+spring.datasource.password=baraholka
 spring.flyway.locations=classpath:db/migration
 spring.flyway.ignore-missing-migrations=true
 spring.flyway.out-of-order=true
