Revert "[be-012] added populateDatabase task for Gradle"
[BE-P-015] This reverts commit d0ce6782 (task BE-012)

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -10,8 +10,7 @@ services:
       - POSTGRES_DB=baraholka
       - POSTGRES_USER=baraholka
       - POSTGRES_PASSWORD=baraholka
-    volumes:
-      - ./.gradle-cache:/home/spring/spd-baraholka/.gradle
+#    volumes:
 #      - ./db-data:/var/lib/postgresql/data
     healthcheck:
       test: [ "CMD", "pg_isready", "-q", "-d", "baraholka", "-U", "baraholka" ]
@@ -46,6 +45,5 @@ services:
     depends_on:
       - database
 
-volumes:
-  .gradle-cache:
+#volumes:
 #  db-data:
