--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,13 +1,10 @@
-spring.datasource.url=jdbc:postgresql://localhost:5432/baraholka
-spring.datasource.username=baraholka
-spring.datasource.password=baraholka
-spring.flyway.locations=classpath:db/migration
-#spring.datasource.url=${DB_URL:jdbc:postgresql://localhost:5432/baraholka}
-#spring.datasource.username=${DB_USERNAME:baraholka}
-#spring.datasource.password=${DB_PASSWORD:baraholka}
+#spring.datasource.url=jdbc:postgresql://localhost:5432/baraholka
+#spring.datasource.username=baraholka
+#spring.datasource.password=baraholka
 spring.datasource.url=jdbc:postgresql://localhost:5432/baraholka_test
 spring.datasource.username=postgres
 spring.datasource.password=526526526
+spring.flyway.locations=classpath:db/migration
 spring.flyway.ignore-missing-migrations=true
 spring.flyway.out-of-order=true
 spring.flyway.baselineOnMigrate=true
