--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,9 +1,6 @@
-#spring.datasource.url=${DB_URL:jdbc:postgresql://localhost:5432/baraholka}
-#spring.datasource.username=${DB_USERNAME:baraholka}
-#spring.datasource.password=${DB_PASSWORD:baraholka}
-spring.datasource.url=${DB_URL:jdbc:postgresql://localhost:5432/baraholka_test}
-spring.datasource.username=${DB_USERNAME:postgres}
-spring.datasource.password=${DB_PASSWORD:526526526}
+spring.datasource.url=${DB_URL:jdbc:postgresql://localhost:5432/baraholka}
+spring.datasource.username=${DB_USERNAME:baraholka}
+spring.datasource.password=${DB_PASSWORD:baraholka}
 spring.flyway.locations=classpath:db/migration
 spring.flyway.ignore-missing-migrations=true
 spring.flyway.out-of-order=true
