--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -52,7 +52,7 @@ build master:
   variables:
     IMAGE_TAG: latest
   only:
-    - master
+    - RC/final-demo
 
 .deploy:
   stage: deploy
@@ -78,4 +78,4 @@ deploy stage:
   variables:
     APP_PATH: /opt/baraholka-master
   only:
-    - master
+    - RC/final-demo
