Fix redirect url.

--- a/src/main/resources/application-stage.properties
+++ b/src/main/resources/application-stage.properties
@@ -1,1 +1,1 @@
-spring.security.oauth2.client.registration.google.redirect-uri=${PROTOCOL:https}://${HOST:marketplace.spd-ukraine.com}/api/login/oauth2/code/google
+spring.security.oauth2.client.registration.google.redirect-uri=${PROTOCOL:https}://${HOST:marketplace-stage.spd-ukraine.com}/api/login/oauth2/code/google
